admin panel jadi! login panel jadi!

--- a/src/train/ticket/ScheduleAdminPanel.form
+++ b/src/train/ticket/ScheduleAdminPanel.form
@@ -729,6 +729,9 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Inter 18pt Black" size="24" style="1"/>
             </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="44" green="44" red="44" type="rgb"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="UBD Express"/>
           </Properties>
         </Component>
@@ -736,6 +739,9 @@
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Inter 18pt Black" size="24" style="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="44" green="44" red="44" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Profile"/>
           </Properties>
