admin panel jadi! login panel jadi! train schedule jadi! ticket resevation jadi!

--- a/src/train/ticket/TrainSchedule.form
+++ b/src/train/ticket/TrainSchedule.form
@@ -196,7 +196,7 @@
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="horizontalAlignment" type="int" value="0"/>
-                    <Property name="text" type="java.lang.String" value="Admin Panel"/>
+                    <Property name="text" type="java.lang.String" value="Train Schedule"/>
                   </Properties>
                 </Component>
               </SubComponents>
