--- a/src/train/ticket/ScheduleAdminPanel.form
+++ b/src/train/ticket/ScheduleAdminPanel.form
@@ -231,7 +231,7 @@
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Container class="train.ticket.RoundedPanel" name="roundedPanel2">
+                <Container class="train.ticket.components.RoundedPanel" name="roundedPanel2">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="44" green="44" red="44" type="rgb"/>
@@ -269,56 +269,56 @@
                     </Component>
                   </SubComponents>
                 </Container>
-                <Component class="train.ticket.RoundedComboBox" name="cbTrainNumber">
+                <Component class="train.ticket.components.RoundedComboBox" name="cbTrainNumber">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.RoundedComboBox" name="cbOrigin">
+                <Component class="train.ticket.components.RoundedComboBox" name="cbOrigin">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.RoundedComboBox" name="cbMachinist">
+                <Component class="train.ticket.components.RoundedComboBox" name="cbMachinist">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.RoundedComboBox" name="cbDestination">
+                <Component class="train.ticket.components.RoundedComboBox" name="cbDestination">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.RoundedComboBox" name="cbCarriages">
+                <Component class="train.ticket.components.RoundedComboBox" name="cbCarriages">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.RoundedComboBox" name="cbDepatureTime">
+                <Component class="train.ticket.components.RoundedComboBox" name="cbDepatureTime">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.RoundedComboBox" name="cbClass">
+                <Component class="train.ticket.components.RoundedComboBox" name="cbClass">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.RoundedButton" name="btnInput">
+                <Component class="train.ticket.components.RoundedButton" name="btnInput">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="0" green="ad" red="e" type="rgb"/>
@@ -329,7 +329,7 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInputActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="train.ticket.RoundedTextField" name="rtfPrice">
+                <Component class="train.ticket.components.RoundedTextField" name="rtfPrice">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
@@ -430,7 +430,7 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Container class="train.ticket.RoundedPanel" name="roundedPanel1">
+            <Container class="train.ticket.components.RoundedPanel" name="roundedPanel1">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="44" green="44" red="44" type="rgb"/>
@@ -512,7 +512,7 @@
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Container class="train.ticket.RoundedPanel" name="roundedPanel4">
+                <Container class="train.ticket.components.RoundedPanel" name="roundedPanel4">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="44" green="44" red="44" type="rgb"/>
@@ -550,7 +550,7 @@
                     </Component>
                   </SubComponents>
                 </Container>
-                <Component class="train.ticket.RoundedButton" name="btnIdDelete">
+                <Component class="train.ticket.components.RoundedButton" name="btnIdDelete">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="0" green="0" red="b9" type="rgb"/>
@@ -561,7 +561,7 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnIdDeleteActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="train.ticket.RoundedTextField" name="rtfPrice1">
+                <Component class="train.ticket.components.RoundedTextField" name="rtfPrice1">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
@@ -627,7 +627,7 @@
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Container class="train.ticket.RoundedPanel" name="roundedPanel5">
+                <Container class="train.ticket.components.RoundedPanel" name="roundedPanel5">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="44" green="44" red="44" type="rgb"/>
@@ -665,7 +665,7 @@
                     </Component>
                   </SubComponents>
                 </Container>
-                <Component class="train.ticket.RoundedButton" name="btnBookingDelete">
+                <Component class="train.ticket.components.RoundedButton" name="btnBookingDelete">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="0" green="0" red="b9" type="rgb"/>
@@ -676,7 +676,7 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBookingDeleteActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="train.ticket.RoundedTextField" name="rtfPrice2">
+                <Component class="train.ticket.components.RoundedTextField" name="rtfPrice2">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
