--- a/src/train/ticket/TrainSchedule.form
+++ b/src/train/ticket/TrainSchedule.form
@@ -35,7 +35,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="55" max="32767" attributes="0"/>
+              <EmptySpace pref="20" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -56,7 +56,7 @@
                   <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel19" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="243" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="nav_booking" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="nav_admin" min="-2" max="-2" attributes="0"/>
@@ -80,10 +80,8 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel19" alignment="3" min="-2" pref="56" max="-2" attributes="0"/>
-                          <Group type="103" alignment="3" groupAlignment="3" attributes="0">
-                              <Component id="nav_booking" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
-                              <Component id="nav_admin" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="nav_booking" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
+                          <Component id="nav_admin" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
                       </Group>
                       <Component id="jLabel11" min="-2" pref="56" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -166,8 +164,8 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="roundedPanel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" min="-2" pref="546" max="-2" attributes="0"/>
-                      <EmptySpace pref="21" max="32767" attributes="0"/>
+                      <Component id="jScrollPane1" min="-2" pref="584" max="-2" attributes="0"/>
+                      <EmptySpace pref="18" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -218,131 +216,17 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="jTable1">
+                <Component class="train.ticket.components.CustomTable" name="customTable1">
                   <Properties>
-                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="Inter 18pt" size="14" style="0"/>
+                    <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                      <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
+                        <LineBorder>
+                          <Color PropertyName="color" blue="44" green="44" red="44" type="rgb"/>
+                        </LineBorder>
+                      </Border>
                     </Property>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="9" rowCount="10">
-                        <Column editable="true" title="Id Schedule" type="java.lang.String">
-                          <Data value="SDF345"/>
-                          <Data value="SCH001"/>
-                          <Data value="SKE001"/>
-                          <Data value="SOP001"/>
-                          <Data value="SKW001"/>
-                          <Data value="SUT001"/>
-                          <Data value="PHT001"/>
-                          <Data value="PKQ001"/>
-                          <Data value="ULP001"/>
-                          <Data value="TRN001"/>
-                        </Column>
-                        <Column editable="true" title="Train Number" type="java.lang.String">
-                          <Data value="1006DF"/>
-                          <Data value="1007DF"/>
-                          <Data value="1008DF"/>
-                          <Data value="1009DF"/>
-                          <Data value="1010DF"/>
-                          <Data value="1011DF"/>
-                          <Data value="1012DF"/>
-                          <Data value="1013DF"/>
-                          <Data value="1014DF"/>
-                          <Data value="1015DF"/>
-                        </Column>
-                        <Column editable="true" title="Machinist" type="java.lang.String">
-                          <Data value="Budi"/>
-                          <Data value="Ari"/>
-                          <Data value="Dedi"/>
-                          <Data value="Eko"/>
-                          <Data value="Hidayat"/>
-                          <Data value="Romi"/>
-                          <Data value="Andri"/>
-                          <Data value="Raden"/>
-                          <Data value="Robby"/>
-                          <Data value="Nero"/>
-                        </Column>
-                        <Column editable="true" title="Carriage" type="java.lang.Integer">
-                          <Data value="10"/>
-                          <Data value="10"/>
-                          <Data value="10"/>
-                          <Data value="12"/>
-                          <Data value="12"/>
-                          <Data value="12"/>
-                          <Data value="8"/>
-                          <Data value="8"/>
-                          <Data value="8"/>
-                          <Data value="8"/>
-                        </Column>
-                        <Column editable="true" title="Orgin" type="java.lang.String">
-                          <Data value="Jakarta"/>
-                          <Data value="Jakarta"/>
-                          <Data value="Jakarta"/>
-                          <Data value="Jakarta"/>
-                          <Data value="Jakarta"/>
-                          <Data value="Tangerang"/>
-                          <Data value="Tangerang"/>
-                          <Data value="Tangerang"/>
-                          <Data value="Tangerang"/>
-                          <Data value="Tangerang"/>
-                        </Column>
-                        <Column editable="true" title="Destination" type="java.lang.String">
-                          <Data value="Tangerang"/>
-                          <Data value="Tangerang"/>
-                          <Data value="Tangerang"/>
-                          <Data value="Tangerang"/>
-                          <Data value="Tangerang"/>
-                          <Data value="Jakarta"/>
-                          <Data value="Jakarta"/>
-                          <Data value="Jakarta"/>
-                          <Data value="Jakarta"/>
-                          <Data value="Jakarta"/>
-                        </Column>
-                        <Column editable="true" title="Depature Time" type="java.lang.String">
-                          <Data value="06:30"/>
-                          <Data value="06:30"/>
-                          <Data value="06:30"/>
-                          <Data value="06:30"/>
-                          <Data value="06:30"/>
-                          <Data value="06:30"/>
-                          <Data value="06:30"/>
-                          <Data value="06:30"/>
-                          <Data value="06:30"/>
-                          <Data value="06:30"/>
-                        </Column>
-                        <Column editable="true" title="Class" type="java.lang.String">
-                          <Data value="Economy"/>
-                          <Data value="Economy"/>
-                          <Data value="Economy"/>
-                          <Data value="Business"/>
-                          <Data value="Business"/>
-                          <Data value="Business"/>
-                          <Data value="Executive"/>
-                          <Data value="Executive"/>
-                          <Data value="Executive"/>
-                          <Data value="Executive"/>
-                        </Column>
-                        <Column editable="true" title="Price" type="java.lang.String">
-                          <Data value="Rp. 3.000"/>
-                          <Data value="Rp. 3.000"/>
-                          <Data value="Rp. 3.000"/>
-                          <Data value="Rp. 5.000"/>
-                          <Data value="Rp. 5.000"/>
-                          <Data value="Rp.  5.000"/>
-                          <Data value="Rp. 10.000"/>
-                          <Data value="Rp. 10.000"/>
-                          <Data value="Rp. 10.000"/>
-                          <Data value="Rp. 10.000"/>
-                        </Column>
-                      </Table>
-                    </Property>
-                    <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[2101, 1154]"/>
-                    </Property>
-                    <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[2101, 1154]"/>
-                    </Property>
-                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[2101, 1154]"/>
+                    <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                      <Color blue="44" green="44" red="44" type="rgb"/>
                     </Property>
                   </Properties>
                 </Component>
