--- a/src/client/pages/BookingMenu.form
+++ b/src/client/pages/BookingMenu.form
@@ -61,7 +61,7 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="nav_schedule" min="-2" pref="174" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
-                              <Component id="jLabel20" min="-2" max="-2" attributes="0"/>
+                              <Component id="lblProfile" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jPanel2" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
@@ -88,7 +88,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel19" alignment="3" min="-2" pref="56" max="-2" attributes="0"/>
-                          <Component id="jLabel20" alignment="3" min="-2" pref="56" max="-2" attributes="0"/>
+                          <Component id="lblProfile" alignment="3" min="-2" pref="56" max="-2" attributes="0"/>
                           <Component id="nav_admin" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
                           <Component id="nav_schedule" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
                       </Group>
@@ -172,7 +172,7 @@
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Container class="train.ticket.components.RoundedPanel" name="roundedPanel11">
+                <Container class="client.components.RoundedPanel" name="roundedPanel11">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="44" green="44" red="44" type="rgb"/>
@@ -221,7 +221,7 @@
                     <Property name="text" type="java.lang.String" value="Booking Name"/>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.components.RoundedComboBox" name="cbTrainNumber1">
+                <Component class="client.components.RoundedComboBox" name="cbTrainNumber1">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
@@ -253,7 +253,7 @@
                     <Property name="text" type="java.lang.String" value="Class"/>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.components.RoundedComboBox" name="cbTrainNumber2">
+                <Component class="client.components.RoundedComboBox" name="cbTrainNumber2">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
@@ -274,7 +274,7 @@
                     <Property name="text" type="java.lang.String" value="Depature Time"/>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.components.RoundedComboBox" name="cbTrainNumber3">
+                <Component class="client.components.RoundedComboBox" name="cbTrainNumber3">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="null"/>
@@ -295,7 +295,7 @@
                     <Property name="text" type="java.lang.String" value="Price"/>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.components.RoundedTextField" name="roundedTextField1">
+                <Component class="client.components.RoundedTextField" name="roundedTextField1">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                       <Connection code="new RoundedBorder(20, new Color(68,68,68), 1)" type="code"/>
@@ -310,7 +310,7 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="roundedTextField1ActionPerformed"/>
                   </Events>
                 </Component>
-                <Component class="train.ticket.components.RoundedTextField" name="roundedTextField2">
+                <Component class="client.components.RoundedTextField" name="roundedTextField2">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                       <Connection code="new RoundedBorder(20, new Color(68,68,68), 1)" type="code"/>
@@ -382,7 +382,7 @@
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Container class="train.ticket.components.RoundedPanel" name="roundedPanel13">
+                <Container class="client.components.RoundedPanel" name="roundedPanel13">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="44" green="44" red="44" type="rgb"/>
@@ -702,7 +702,7 @@
                     </Component>
                   </SubComponents>
                 </Container>
-                <Component class="train.ticket.components.RoundedButton" name="roundedButton1">
+                <Component class="client.components.RoundedButton" name="roundedButton1">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="44" green="44" red="44" type="rgb"/>
@@ -713,7 +713,7 @@
                     <Property name="text" type="java.lang.String" value="Confirm Booking"/>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.components.RoundedButton" name="roundedButton2">
+                <Component class="client.components.RoundedButton" name="roundedButton2">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -732,7 +732,7 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="train.ticket.components.RoundedButton" name="roundedButton3">
+            <Component class="client.components.RoundedButton" name="roundedButton3">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="44" green="44" red="44" type="rgb"/>
@@ -907,7 +907,7 @@
                 </DimensionLayout>
               </Layout>
               <SubComponents>
-                <Container class="train.ticket.components.RoundedPanel" name="roundedPanel12">
+                <Container class="client.components.RoundedPanel" name="roundedPanel12">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="44" green="44" red="44" type="rgb"/>
@@ -1249,7 +1249,7 @@
                     <Property name="text" type="java.lang.String" value="-"/>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.components.RoundedButton" name="roundedButton4">
+                <Component class="client.components.RoundedButton" name="roundedButton4">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="44" green="44" red="44" type="rgb"/>
@@ -1266,7 +1266,7 @@
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.components.RoundedButton" name="roundedButton5">
+                <Component class="client.components.RoundedButton" name="roundedButton5">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -1286,7 +1286,7 @@
                     </Property>
                   </Properties>
                 </Component>
-                <Component class="train.ticket.components.RoundedButton" name="roundedButton6">
+                <Component class="client.components.RoundedButton" name="roundedButton6">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -1308,7 +1308,7 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JLabel" name="jLabel20">
+            <Component class="javax.swing.JLabel" name="lblProfile">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Inter 18pt Black" size="24" style="1"/>
@@ -1322,7 +1322,7 @@
                 <Property name="text" type="java.lang.String" value="Profile"/>
               </Properties>
             </Component>
-            <Component class="train.ticket.components.RoundedButton" name="nav_admin">
+            <Component class="client.components.RoundedButton" name="nav_admin">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="44" green="44" red="44" type="rgb"/>
@@ -1336,7 +1336,7 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nav_adminActionPerformed"/>
               </Events>
             </Component>
-            <Component class="train.ticket.components.RoundedButton" name="nav_schedule">
+            <Component class="client.components.RoundedButton" name="nav_schedule">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="44" green="44" red="44" type="rgb"/>
