--- a/src/client/pages/ScheduleAdminPanel.form
+++ b/src/client/pages/ScheduleAdminPanel.form
@@ -65,7 +65,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="nav_schedule" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="jLabel20" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblProfile" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -85,7 +85,7 @@
                               <Component id="nav_booking" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
                               <Component id="nav_schedule" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="jLabel20" alignment="1" min="-2" pref="56" max="-2" attributes="0"/>
+                          <Component id="lblProfile" alignment="1" min="-2" pref="56" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
@@ -249,7 +249,7 @@
                     </DimensionLayout>
                   </Layout>
                   <SubComponents>
-                    <Container class="train.ticket.components.RoundedPanel" name="roundedPanel2">
+                    <Container class="client.components.RoundedPanel" name="roundedPanel2">
                       <Properties>
                         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="44" green="44" red="44" type="rgb"/>
@@ -287,7 +287,7 @@
                         </Component>
                       </SubComponents>
                     </Container>
-                    <Component class="train.ticket.components.RoundedComboBox" name="cmbDestination">
+                    <Component class="client.components.RoundedComboBox" name="cmbDestination">
                       <Properties>
                         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                           <Border info="null"/>
@@ -308,7 +308,7 @@
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmbDestinationActionPerformed"/>
                       </Events>
                     </Component>
-                    <Component class="train.ticket.components.RoundedComboBox" name="cmbCarriages">
+                    <Component class="client.components.RoundedComboBox" name="cmbCarriages">
                       <Properties>
                         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                           <Border info="null"/>
@@ -327,7 +327,7 @@
                         </Property>
                       </Properties>
                     </Component>
-                    <Component class="train.ticket.components.RoundedComboBox" name="cmbClass">
+                    <Component class="client.components.RoundedComboBox" name="cmbClass">
                       <Properties>
                         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                           <Border info="null"/>
@@ -347,7 +347,7 @@
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmbClassActionPerformed"/>
                       </Events>
                     </Component>
-                    <Component class="train.ticket.components.RoundedButton" name="btnInput">
+                    <Component class="client.components.RoundedButton" name="btnInput">
                       <Properties>
                         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="0" green="ad" red="e" type="rgb"/>
@@ -358,7 +358,7 @@
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInputActionPerformed"/>
                       </Events>
                     </Component>
-                    <Component class="train.ticket.components.RoundedTextField" name="txtPrice">
+                    <Component class="client.components.RoundedTextField" name="txtPrice">
                       <Properties>
                         <Property name="editable" type="boolean" value="false"/>
                         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
@@ -439,7 +439,7 @@
                         <Property name="text" type="java.lang.String" value="Departure Time"/>
                       </Properties>
                     </Component>
-                    <Component class="train.ticket.components.RoundedTextField" name="txtMachinist">
+                    <Component class="client.components.RoundedTextField" name="txtMachinist">
                       <Properties>
                         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                           <Border info="null"/>
@@ -453,7 +453,7 @@
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtMachinistActionPerformed"/>
                       </Events>
                     </Component>
-                    <Component class="train.ticket.components.RoundedTextField" name="txtDepartureTime">
+                    <Component class="client.components.RoundedTextField" name="txtDepartureTime">
                       <Properties>
                         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                           <Border info="null"/>
@@ -467,7 +467,7 @@
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtDepartureTimeActionPerformed"/>
                       </Events>
                     </Component>
-                    <Component class="train.ticket.components.RoundedTextField" name="txtTrainNumber">
+                    <Component class="client.components.RoundedTextField" name="txtTrainNumber">
                       <Properties>
                         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                           <Border info="null"/>
@@ -494,7 +494,7 @@
                     </Component>
                   </SubComponents>
                 </Container>
-                <Container class="train.ticket.components.RoundedPanel" name="roundedPanel1">
+                <Container class="client.components.RoundedPanel" name="roundedPanel1">
                   <Properties>
                     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="44" green="44" red="44" type="rgb"/>
@@ -550,7 +550,7 @@
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jLabel32" min="-2" max="-2" attributes="0"/>
                                   <Component id="roundedPanel4" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="rtfPrice1" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="idScheduleDeleteTxtField" alignment="0" max="32767" attributes="0"/>
                                   <Component id="btnIdDelete" alignment="0" pref="666" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
@@ -565,7 +565,7 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="jLabel32" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="rtfPrice1" min="-2" pref="26" max="-2" attributes="0"/>
+                              <Component id="idScheduleDeleteTxtField" min="-2" pref="26" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnIdDelete" min="-2" pref="24" max="-2" attributes="0"/>
                               <EmptySpace pref="17" max="32767" attributes="0"/>
@@ -574,7 +574,7 @@
                     </DimensionLayout>
                   </Layout>
                   <SubComponents>
-                    <Container class="train.ticket.components.RoundedPanel" name="roundedPanel4">
+                    <Container class="client.components.RoundedPanel" name="roundedPanel4">
                       <Properties>
                         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="44" green="44" red="44" type="rgb"/>
@@ -612,7 +612,7 @@
                         </Component>
                       </SubComponents>
                     </Container>
-                    <Component class="train.ticket.components.RoundedButton" name="btnIdDelete">
+                    <Component class="client.components.RoundedButton" name="btnIdDelete">
                       <Properties>
                         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="0" green="0" red="b9" type="rgb"/>
@@ -623,7 +623,7 @@
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnIdDeleteActionPerformed"/>
                       </Events>
                     </Component>
-                    <Component class="train.ticket.components.RoundedTextField" name="rtfPrice1">
+                    <Component class="client.components.RoundedTextField" name="idScheduleDeleteTxtField">
                       <Properties>
                         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                           <Border info="null"/>
@@ -634,7 +634,7 @@
                         <Property name="horizontalAlignment" type="int" value="0"/>
                       </Properties>
                       <Events>
-                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rtfPrice1ActionPerformed"/>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="idScheduleDeleteTxtFieldActionPerformed"/>
                       </Events>
                     </Component>
                     <Component class="javax.swing.JLabel" name="jLabel32">
@@ -668,7 +668,7 @@
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                   <Component id="jLabel34" min="-2" max="-2" attributes="0"/>
                                   <Component id="roundedPanel5" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="rtfPrice2" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="bookingTicketDeleteTxtField" alignment="0" max="32767" attributes="0"/>
                                   <Component id="btnBookingDelete" alignment="0" pref="666" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
@@ -683,7 +683,7 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="jLabel34" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="rtfPrice2" min="-2" pref="26" max="-2" attributes="0"/>
+                              <Component id="bookingTicketDeleteTxtField" min="-2" pref="26" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnBookingDelete" min="-2" pref="24" max="-2" attributes="0"/>
                               <EmptySpace pref="17" max="32767" attributes="0"/>
@@ -692,7 +692,7 @@
                     </DimensionLayout>
                   </Layout>
                   <SubComponents>
-                    <Container class="train.ticket.components.RoundedPanel" name="roundedPanel5">
+                    <Container class="client.components.RoundedPanel" name="roundedPanel5">
                       <Properties>
                         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="44" green="44" red="44" type="rgb"/>
@@ -730,7 +730,7 @@
                         </Component>
                       </SubComponents>
                     </Container>
-                    <Component class="train.ticket.components.RoundedButton" name="btnBookingDelete">
+                    <Component class="client.components.RoundedButton" name="btnBookingDelete">
                       <Properties>
                         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="0" green="0" red="b9" type="rgb"/>
@@ -741,7 +741,7 @@
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBookingDeleteActionPerformed"/>
                       </Events>
                     </Component>
-                    <Component class="train.ticket.components.RoundedTextField" name="rtfPrice2">
+                    <Component class="client.components.RoundedTextField" name="bookingTicketDeleteTxtField">
                       <Properties>
                         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                           <Border info="null"/>
@@ -752,7 +752,7 @@
                         <Property name="horizontalAlignment" type="int" value="0"/>
                       </Properties>
                       <Events>
-                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rtfPrice2ActionPerformed"/>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bookingTicketDeleteTxtFieldActionPerformed"/>
                       </Events>
                     </Component>
                     <Component class="javax.swing.JLabel" name="jLabel34">
@@ -784,7 +784,7 @@
                 <Property name="text" type="java.lang.String" value="UBD Express"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel20">
+            <Component class="javax.swing.JLabel" name="lblProfile">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Inter 18pt Black" size="24" style="1"/>
@@ -798,7 +798,7 @@
                 <Property name="text" type="java.lang.String" value="Profile"/>
               </Properties>
             </Component>
-            <Component class="train.ticket.components.RoundedButton" name="nav_booking">
+            <Component class="client.components.RoundedButton" name="nav_booking">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="44" green="44" red="44" type="rgb"/>
@@ -812,7 +812,7 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nav_bookingActionPerformed"/>
               </Events>
             </Component>
-            <Component class="train.ticket.components.RoundedButton" name="nav_schedule">
+            <Component class="client.components.RoundedButton" name="nav_schedule">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="44" green="44" red="44" type="rgb"/>
