--- a/src/client/pages/TrainSchedule.form
+++ b/src/client/pages/TrainSchedule.form
@@ -63,7 +63,7 @@
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="jLabel17" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLabel20" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblProfile" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
@@ -86,7 +86,7 @@
                       <Component id="jLabel11" min="-2" pref="56" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel17" alignment="1" min="-2" pref="56" max="-2" attributes="0"/>
-                          <Component id="jLabel20" alignment="1" min="-2" pref="56" max="-2" attributes="0"/>
+                          <Component id="lblProfile" alignment="1" min="-2" pref="56" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -124,7 +124,7 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="jLabel20">
+        <Component class="javax.swing.JLabel" name="lblProfile">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Inter 18pt Black" size="24" style="1"/>
@@ -134,6 +134,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Profile"/>
           </Properties>
+          <Events>
+            <EventHandler event="ancestorAdded" listener="javax.swing.event.AncestorListener" parameters="javax.swing.event.AncestorEvent" handler="lblProfileAncestorAdded"/>
+          </Events>
         </Component>
         <Container class="javax.swing.JPanel" name="jPanel2">
           <Properties>
@@ -171,7 +174,7 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Container class="train.ticket.components.RoundedPanel" name="roundedPanel1">
+            <Container class="client.components.RoundedPanel" name="roundedPanel1">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="44" green="44" red="44" type="rgb"/>
@@ -216,7 +219,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="train.ticket.components.CustomTable" name="customTable1">
+                <Component class="client.components.CustomTable" name="schedule_data">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
@@ -234,7 +237,7 @@
             </Container>
           </SubComponents>
         </Container>
-        <Component class="train.ticket.components.RoundedButton" name="nav_booking">
+        <Component class="client.components.RoundedButton" name="nav_booking">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="44" green="44" red="44" type="rgb"/>
@@ -248,7 +251,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nav_bookingActionPerformed"/>
           </Events>
         </Component>
-        <Component class="train.ticket.components.RoundedButton" name="nav_admin">
+        <Component class="client.components.RoundedButton" name="nav_admin">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="44" green="44" red="44" type="rgb"/>
