--- a/src/client/views/TrainSchedule.form
+++ b/src/client/views/TrainSchedule.form
@@ -302,14 +302,16 @@
                       <Border info="null"/>
                     </Property>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="7">
+                      <StringArray count="9">
                         <StringItem index="0" value="Id Schedule"/>
                         <StringItem index="1" value="Train Number"/>
                         <StringItem index="2" value="Machinist"/>
                         <StringItem index="3" value="Origin"/>
                         <StringItem index="4" value="Destination"/>
                         <StringItem index="5" value="Departure Time"/>
-                        <StringItem index="6" value="Price"/>
+                        <StringItem index="6" value="Carriages"/>
+                        <StringItem index="7" value="Class"/>
+                        <StringItem index="8" value="Price"/>
                       </StringArray>
                     </Property>
                   </Properties>
